using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CharacterStateConstants
{
    public const string DriverParam = "Driver";
    public const string MouseDownParam = "MouseDown";
    public const string BlendParam = "Blend";
    public const string BossRunCycle = "RunCycle";
}
